<resources>
    <string name="app_name">WorderWorld</string>
    <string name="play">Play</string>
    <string name="store">Store</string>
    <string name="trophies">Trophies</string>
    <string name="levels_menu">Level mode</string>
    <string name="daily_menu">Daily</string>

    <string name="best_score">Best score: %d</string>

    <string name="coming_soon">Coming soon...</string>

    <!--splash-->
    <string name="terms_second_line">and</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_of_use"><u>Terms of Use</u></string>

    <!--store-->
    <string name="buy">BUY</string>
    <string name="select">SELECT</string>
    <string name="selected_text">SELECTED</string>
    <string name="check">Check</string>
    <string name="ok">OK</string>
    <string name="info">Info</string>
    <string name="words_guessed">Words guessed: %d</string>
    <string name="words_guessed_row">Guessed words in a row: %d</string>
    <string name="max_level">Max level: %d</string>
    <string name="unlock_all_words_for">Unlock all words\nfor %s</string>
    <string name="unlock_mode">Unlock mode\nfor %s</string>
    <string name="letters_in_word">Letters in word:</string>
    <string name="time_until_next_word">Time until next word:</string>
    <string name="level_mode">Level mode</string>
    <string name="get_word">Get Word</string>
    <string name="get_daily_word">Get Daily\nWord</string>
    <string name="lets_start">Let\'s start</string>
    <string name="locked">Locked</string>
    <string name="level">Level %d</string>
    <string name="play_again">Play again</string>
    <string name="next_level">Next level</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="lose_progress">Are you sure?\nProgress will be lost</string>
    <string name="wow">Wow!</string>
    <string name="congrats">Congrats!</string>
    <string name="level_completed">Level completed</string>
    <string name="no_such_letter_in_the_word">There is no such letter in the word</string>
    <string name="how_many_words">How many words do you guess\nbefore you lose?</string>
</resources>