<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/nav_lets_play"
        android:icon="@drawable/baseline_play_arrow_24"
        android:iconTint="@color/white"
        android:title="@string/play" />

    <item
        android:id="@+id/nav_levels_lets_play"
        android:icon="@drawable/outline_heart_broken_24"
        android:iconTint="@color/white"
        android:title="@string/levels_menu" />

    <item
        android:id="@+id/nav_store"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:iconTint="@color/white"
        android:title="@string/store" />

    <item
        android:id="@+id/nav_daily"
        android:icon="@drawable/baseline_calendar_month_24"
        android:iconTint="@color/white"
        android:title="@string/daily_menu" />

    <item
        android:id="@+id/nav_trophies"
        android:icon="@drawable/baseline_star_border_24"
        android:iconTint="@color/white"
        android:title="@string/trophies" />
</menu>