<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="0dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/grey"
        app:cardUseCompatPadding="false"
        app:layout_constraintDimensionRatio="10:11"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ball_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ball_1"
                app:layout_constraintVertical_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.WorderWorld.Ball"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/select"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ball_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1"
                app:cardBackgroundColor="@color/grey"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="5dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/select"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/active"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                android:visibility="gone"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ball_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1"
                app:cardBackgroundColor="@color/black"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="5dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/baseline_done_24"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/selected_text"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textSize="20sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/buy_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:cardCornerRadius="20dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@id/center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ball_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1"
                app:cardBackgroundColor="@color/grey"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="5dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/buy_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/buy"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/center"
                app:layout_constraintBottom_toBottomOf="@id/buy_button"
                app:layout_constraintTop_toTopOf="@id/buy_button"
                android:text=""
                tools:text="2$"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_lock_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="10dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>